--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "natours",
   "version": "1.0.0",
-  "description": "Outdoors",
+  "description": "Landing page for natours",
   "main": "index.js",
-  "homepage": "http://prajwal98.github.io/outdoors",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch:sass": "node-sass sass/main.scss dist/css/style.css -w",
+    "start": "npm-run-all --parallel watch:sass",
+    "compile:sass": "node-sass sass/main.scss dist/css/style.comp.css",
+    "concat:css": "concat -o dist/css/style.concat.css dist/css/icon-font.css dist/css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' dist/css/style.concat.css -o dist/css/style.prefix.css",
+    "compress:css": "node-sass dist/css/style.prefix.css dist/css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
-  "author": "prajwal",
+  "author": "Jonas",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "autoprefixer": "^7.1.4",
     "concat": "^1.0.3",
-    "node-sass": "^4.14.1",
+    "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.1",
     "postcss-cli": "^4.1.1"
-  },
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
   }
 }
