--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Landing page for natours",
   "main": "index.js",
   "scripts": {
+    "deploy": "gh-pages -d dist",
     "watch:sass": "node-sass sass/main.scss dist/css/style.css -w",
     "start": "npm-run-all --parallel watch:sass",
     "compile:sass": "node-sass sass/main.scss dist/css/style.comp.css",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "autoprefixer": "^7.1.4",
     "concat": "^1.0.3",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.1",
     "postcss-cli": "^4.1.1"
